tests/parser/should_fail/patFail009.hs
{-# LANGUAGE OverloadedLabels #-}
module PatFail009 where

f #a = _
