tests/parser/should_fail/patFail009.stderr

patFail009.hs:4:3: error: [GHC-04584]
    Expression syntax in pattern: #a
